versioned_docs/version-8.3.1/sdks/android/barcode-capture/get-started.md
---
description: "This page describes the step-by-step instructions that helps you to add Barcode Capture to your application.                                                                                    "

sidebar_position: 2
pagination_prev: null
framework: android
keywords:
  - android
---

# Get Started

This page describes the step-by-step instructions that helps you to add Barcode Capture to your application.

The general steps are:

- Include the *ScanditBarcodeCapture* library and its dependencies to your project, if any
- Create a new [data capture context](https://docs.scandit.com/data-capture-sdk/android/core/api/data-capture-context.html#class-scandit.datacapture.core.DataCaptureContext) instance, initialized with your license key
- Create your [barcode capture settings](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/barcode-capture-settings.html#class-scandit.datacapture.barcode.BarcodeCaptureSettings) and enable the [barcode symbologies](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/symbology.html#enum-scandit.datacapture.barcode.Symbology) you want to read
- Create a new [barcode capture mode](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/barcode-capture.html#class-scandit.datacapture.barcode.BarcodeCapture) instance and initialize it
- Register a [barcode capture listener](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/barcode-capture-listener.html#interface-scandit.datacapture.barcode.IBarcodeCaptureListener) to receive scan events
- Process successful scans according to your application’s needs and decide whether more codes will be scanned or the scanning process should be stopped
- Obtain a [camera](https://docs.scandit.com/data-capture-sdk/android/core/api/camera.html#class-scandit.datacapture.core.Camera) instance and set it as the frame source on the data capture context
- Display the camera preview by creating a [data capture view](https://docs.scandit.com/data-capture-sdk/android/core/api/ui/data-capture-view.html#class-scandit.datacapture.core.ui.DataCaptureView)
- If displaying a preview, optionally create a new [overlay](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/ui/barcode-capture-overlay.html#class-scandit.datacapture.barcode.ui.BarcodeCaptureOverlay) and add it to [data capture view](https://docs.scandit.com/data-capture-sdk/android/core/api/ui/data-capture-view.html#class-scandit.datacapture.core.ui.DataCaptureView) for better visual feedback

## Prerequisites

Before starting with adding a capture mode, make sure that you have a valid Scandit Data Capture SDK license key and that you added the necessary dependencies. If you have not done that yet, check out this [guide](/sdks/android/add-sdk).

:::tip
You can retrieve your Scandit Data Capture SDK license key by signing in to your account [Dashboard](https://ssl.scandit.com/dashboard/sign-in).
:::

### External Dependencies

import ExternalDependencies from '../../../partials/get-started/_external-deps-android.mdx';

<ExternalDependencies/>

### Internal Dependencies

import InternalDependencies from '../../../partials/get-started/_internal-deps.mdx';

<InternalDependencies/>

## Create a Data Capture Context

import DataCaptureContextAndroid from '../../../partials/get-started/_create-data-capture-context-android.mdx';

<DataCaptureContextAndroid/>

## Configure Barcode Scanning Settings

Barcode scanning is orchestrated by the [BarcodeCapture data capture mode](https://docs.scandit.com/data-capture-sdk/android/core/api/data-capture-mode.html#interface-scandit.datacapture.core.IDataCaptureMode). This class is the main entry point for scanning barcodes. It is configured through [BarcodeCaptureSettings](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/barcode-capture-settings.html#class-scandit.datacapture.barcode.BarcodeCaptureSettings) and allows you to register one or more [listeners](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/barcode-capture-listener.html#interface-scandit.datacapture.barcode.IBarcodeCaptureListener) that will get informed whenever new codes have been recognized.

For this task, we setup barcode scanning for a small list of barcode types, called [symbologies](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/symbology.html#enum-scandit.datacapture.barcode.Symbology). The list of symbologies to enable is application specific. We recommend that you only enable the symbologies your application requires. If you are not familiar with the symbologies that are relevant for your use case, you can use [capture presets](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/capture-preset.html#enum-scandit.datacapture.barcode.CapturePreset) that are tailored for different verticals (for instance, retail, logistics, and so on).

```kotlin
# import com.scandit.datacapture.barcode.capture.BarcodeCaptureSettings
# import com.scandit.datacapture.barcode.data.Symbology
val settings = BarcodeCaptureSettings().apply {
    enableSymbology(Symbology.CODE128, true)
    enableSymbology(Symbology.CODE39, true)
    enableSymbology(Symbology.QR, true)
    enableSymbology(Symbology.EAN8, true)
    enableSymbology(Symbology.UPCE, true)
    enableSymbology(Symbology.EAN13_UPCA, true)
}
```

:::note
If you are not disabling barcode capture immediately after having scanned the first code, consider setting the [BarcodeCaptureSettings.codeDuplicateFilter](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/barcode-capture-settings.html#property-scandit.datacapture.barcode.BarcodeCaptureSettings.CodeDuplicateFilter) to around `500` or even `-1` if you do not want codes to be scanned more than once.
:::

Next, create a [BarcodeCapture](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/barcode-capture.html#class-scandit.datacapture.barcode.BarcodeCapture) instance with the settings initialized in the previous step:

```kotlin
# import com.scandit.datacapture.barcode.capture.BarcodeCapture
# import com.scandit.datacapture.barcode.capture.BarcodeCaptureSettings
# lateinit var settings: BarcodeCaptureSettings
val barcodeCapture = BarcodeCapture.forDataCaptureContext(dataCaptureContext, settings)
```

## Register the Barcode Capture Listener

To get informed whenever a new code has been recognized, add a [BarcodeCaptureListener](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/barcode-capture-listener.html#interface-scandit.datacapture.barcode.IBarcodeCaptureListener) through [BarcodeCapture.addListener()](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/barcode-capture.html#method-scandit.datacapture.barcode.BarcodeCapture.AddListener) and implement the listener methods to suit your application’s needs.

First conform to the `BarcodeCaptureListener` interface. For example:

```kotlin
# import com.scandit.datacapture.barcode.capture.BarcodeCapture
# import com.scandit.datacapture.barcode.capture.BarcodeCaptureListener
# import com.scandit.datacapture.barcode.capture.BarcodeCaptureSession
# import com.scandit.datacapture.core.data.FrameData
# object : BarcodeCaptureListener {
override fun onBarcodeScanned(
    barcodeCapture: BarcodeCapture,
    session: BarcodeCaptureSession,
    frameData: FrameData
) {
    val recognizedBarcodes = session.newlyRecognizedBarcode
    // Do something with the barcodes. See Rejecting Barcodes, below, for an example.
}
# }
```

Then add the listener:

```kotlin
# import com.scandit.datacapture.barcode.capture.BarcodeCapture
# import com.scandit.datacapture.barcode.capture.BarcodeCaptureListener
# object : BarcodeCaptureListener {
# init {
# lateinit var barcodeCapture: BarcodeCapture
barcodeCapture.addListener(this)
# }
# }
```

### Rejecting Barcodes

To prevent scanning unwanted codes, you can reject them by adding the desired logic to the `onBarcodeScanned` method. This will prevent the barcode from being added to the session and will not trigger the `onSessionUpdated` method.

The example below will only scan barcodes beginning with the digits `09` and ignore all others, using a transparent brush to distinguish a rejected barcode from a recognized one:

```kotlin
# import com.scandit.datacapture.barcode.data.Barcode
# import com.scandit.datacapture.barcode.ui.overlay.BarcodeCaptureOverlay
# import com.scandit.datacapture.core.ui.style.Brush
# lateinit var barcode: Barcode
# lateinit var overlay: BarcodeCaptureOverlay
val data = barcode.data
if (data == null || !data.startsWith("09:")) {
    overlay.brush = Brush.transparent()
    return
}
```

## Use the Built-in Camera

The data capture context supports using different frame sources to perform recognition on. Most applications use the built-in camera of the device.

:::note
In Android, the user must explicitly grant permission for each app to access cameras. Your app needs to declare the use of the Camera permission in the *AndroidManifest.xml* file and request it at runtime so the user can grant or deny the permission. To do that follow the guidelines from [Request app permissions](https://developer.android.com/training/permissions/requesting) to request the `android.permission.CAMERA` permission.
:::

When using the built-in camera there are recommended settings for each capture mode. These must be used to achieve the best performance and user experience for the respective mode. The following code shows how to get the recommended settings and create the camera:

```kotlin
# import com.scandit.datacapture.barcode.capture.BarcodeCapture
# import com.scandit.datacapture.core.source.Camera
val cameraSettings = BarcodeCapture.createRecommendedCameraSettings()

// Depending on the use case further camera settings adjustments can be made here.

val camera = Camera.getDefaultCamera()
camera?.applySettings(cameraSettings)
```

Because the frame source is configurable, the data capture context must be told which frame source to use. This is done with a call to [DataCaptureContext.setFrameSource()](https://docs.scandit.com/data-capture-sdk/android/core/api/data-capture-context.html#method-scandit.datacapture.core.DataCaptureContext.SetFrameSourceAsync)

```kotlin
dataCaptureContext.setFrameSource(camera)
```

The camera is off by default and must be turned on. This is done by calling [FrameSource.switchToDesiredState()](https://docs.scandit.com/data-capture-sdk/android/core/api/frame-source.html#method-scandit.datacapture.core.IFrameSource.SwitchToDesiredStateAsync) with a value of [FrameSourceState.ON](https://docs.scandit.com/data-capture-sdk/android/core/api/frame-source.html#value-scandit.datacapture.core.FrameSourceState.On):

```kotlin
# import com.scandit.datacapture.core.source.FrameSourceState
camera?.switchToDesiredState(FrameSourceState.ON)
```

:::note
On Android, the Scandit Data Capture SDK is not lifecycle aware which means it is not able to turn off the camera when the app goes in the background. This has to be done so the camera is not locked for other apps and is left to the implementer. Make sure that you turn the camera off in the activity’s **onPause lifecycle** method. Often this means that you want to (re)start it in **onResume**. You can see a way of doing this in all of the [samples](https://github.com/Scandit/datacapture-android-samples).
:::

## Use a Capture View to Visualize the Scan Process

When using the built-in camera as frame source, you may want to display the camera preview on the screen together with UI elements that guide the user through the capturing process. 

To do that, add a [DataCaptureView](https://docs.scandit.com/data-capture-sdk/android/core/api/ui/data-capture-view.html#class-scandit.datacapture.core.ui.DataCaptureView) to your view hierarchy:

```kotlin
# import android.app.Activity
# import com.scandit.datacapture.core.ui.DataCaptureView
# object : Activity() {
# init {
val dataCaptureView = DataCaptureView.newInstance(this, dataCaptureContext)
setContentView(dataCaptureView)
# }
# }
```

To visualize the results of barcode scanning, the following [overlay](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/ui/barcode-capture-overlay.html#class-scandit.datacapture.barcode.ui.BarcodeCaptureOverlay) can be added:

```kotlin
# import com.scandit.datacapture.barcode.capture.BarcodeCapture
# import com.scandit.datacapture.barcode.ui.overlay.BarcodeCaptureOverlay
# lateinit var barcodeCapture: BarcodeCapture
val overlay = BarcodeCaptureOverlay.newInstance(barcodeCapture, dataCaptureView)
```

## Disabling Barcode Capture

To disable barcode capture, for instance as a consequence of a barcode being recognized, set [BarcodeCapture.isEnabled](https://docs.scandit.com/data-capture-sdk/android/barcode-capture/api/barcode-capture.html#property-scandit.datacapture.barcode.BarcodeCapture.IsEnabled) to `FALSE`.

The effect is immediate: no more frames are processed after the change. However, if a frame is currently being processed, this frame is completely processed and deliver any results/callbacks to the registered listeners. Note that disabling the capture mode does not stop the camera, the camera continues to stream frames until it is turned off.
